implementata versione senza la position:fixed per sidebar e footer - scrollbar solo sul main content anzichè tutta la pagina

--- a/style.css
+++ b/style.css
@@ -19,7 +19,9 @@ h1 {
 }
 
 #container {
-    height: 100vh;
+    /* fisso l'altezza del container uguale al 100% delle viewport height meno lo spazio riservato al footer */
+    height: calc(100vh - 80px);
+    width: 100%;
 }
 
 .clearfix:after {
@@ -49,11 +51,12 @@ main {
     background-color: lightyellow;
     background-image: linear-gradient(to bottom right, #8b8002, #080800);
     float: left;
-    width: 100%;
-    /* offset orizzontale per la sidebar che ha position:fixed, è la height di aside */
-    padding-left: 210px;
-    /* offset verticale per il footer che ha position:fixed, è la height del footer */
-    padding-bottom: 80px;
+    /* il main è largo il 100% meno la larghezza della sidebar */
+    width: calc(100% - 210px);
+    /* il main è alto tanto quanto il suo container */
+    height: 100%;
+    /* controllo il contenuto di main con una SUA scrollbar dedicata */
+    overflow-y: auto;
 }
 
 #main-container {
@@ -135,46 +138,58 @@ main p {
 }
 
 aside {
+    background-color: #131200;
+    float: left;
+    width: 210px;
+    height: 100%;
+}
+
+#aside-container {
+    height: 100%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
     color: grey;
-    background-color: #131200;
-    float: left;
-    width: 210px;
-    height: 100vh;
-    /* offset orizzontale per la sidebar che ha position:fixed, è la height del footer */
-    padding-bottom: 80px;
-    position: fixed;
-    left: 0;
-    top: 0;
 }
 
-aside ul li {
+#aside-container p {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+#aside-container h5 {
+    text-transform: uppercase;
+}
+
+#side-menu {
+    padding-bottom: 20px;
+}
+
+#side-menu ul li {
     padding: 5px 0;
     list-style-type: none;
 }
 
-aside ul li a {
+#side-menu ul li a {
     font-size: 11px;
     font-weight: bold;
     color: #c8c3c3;
     text-decoration: none;
 }
 
-aside ul li i {
+#side-menu ul li i {
     font-size: 18px;
     padding-right: 10px;
     font-weight: bold;
 }
 
-aside p {
-    font-size: 10px;
-    font-weight: bold;
+#side-menu li:nth-child(2) {
+    border-left: 5px solid #20D560;
+    padding-left: 15px;
 }
 
-aside h5 {
-    text-transform: uppercase;
+#side-menu li:not(:nth-child(2)), #played, #aside-bottom {
+    padding-left: 20px;
 }
 
 #logo {
@@ -197,30 +212,20 @@ aside h5 {
     text-decoration: none;
 }
 
-#side-menu {
-    padding-bottom: 20px;
-}
-
-#side-menu li:nth-child(2) {
-    border-left: 5px solid #20D560;
-    padding-left: 15px;
-}
-
-#side-menu li:not(:nth-child(2)), #played, #aside-bottom {
-    padding-left: 20px;
-}
-
+/* #aside-top {
+    flex-grow: 1;
+} */
 #aside-bottom {
     padding-right: 20px;
-}
-
-#played p {
-    padding-top: 15px;
 }
 
 #aside-bottom i {
     padding-right: 10px;
     font-size: 18px;
+}
+
+#played p {
+    padding-top: 15px;
 }
 
 #user i {
@@ -252,10 +257,10 @@ footer {
     background-color: #282828;
     height: 80px;
     padding: 10px;
-    position: fixed;
+    /* position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
+    width: 100%; */
 }
 
 #footer-left {
